--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Install ESLint
         run: |
-          npm install eslint@8.10.0
-          npm install @microsoft/eslint-formatter-sarif@2.1.7
+          npm install eslint
+          npm install @microsoft/eslint-formatter-sarif
 
       - name: Run ESLint
         run: npx eslint .
@@ -41,7 +41,7 @@ jobs:
           --ext .js,.jsx,.ts,.tsx
           --format @microsoft/eslint-formatter-sarif
           --output-file eslint-results.sarif
-        continue-on-error: true
+        continue-on-error: false
 
       - name: Upload analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v2
